--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 recursive-include viewpoint *.html *.txt
 include requirements.txt
-recursive-include doc_src *.rst *.txt *.png *.css *.html *.js
+recursive-include doc_src *.rst *.png *.css *.html *.js
 include doc_src/Makefile
 include doc_src/make.bat
