--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,5 @@ include requirements.txt
 recursive-include doc_src *.rst *.png *.css *.html *.js
 include doc_src/Makefile
 include doc_src/make.bat
+
+prune example
